Ex8-K8s/manifests/java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
  labels:
    app: java-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: javamysqlapp
        image: tomersf/java-app
        resources:
          requests:
            memory: '64Mi'
            cpu: '250m'
          limits:
            memory: '128Mi'
            cpu: '500m'
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  selector:
    app: java-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
