Ex8-K8s/manifests/java-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: 'nginx'
  rules:
  - host: my-java-app.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: java-app-service
              port: 
                number: 8080
